--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 PHP_VERSION=7.3
-MYSQL_VERSION=5.6
+MYSQL_VERSION=5.7
 APACHE_VERSION=2.4.32
 
 DB_ROOT_PASSWORD=rootpassword
-DB_NAME=ideaspacevr
+DB_NAME=etaki3d
 DB_USERNAME=techlab
-DB_PASSWORD=Tech1234
+DB_PASSWORD=Tech2019
 
 PROJECT_ROOT=.
