--- a/container/apache/demo.apache.conf
+++ b/container/apache/demo.apache.conf
@@ -4,6 +4,9 @@ LoadModule deflate_module /usr/local/apache2/modules/mod_deflate.so
 LoadModule proxy_module /usr/local/apache2/modules/mod_proxy.so
 LoadModule proxy_fcgi_module /usr/local/apache2/modules/mod_proxy_fcgi.so
 
+# Enable this rewrite_module to allow URL request localhost/install-db
+LoadModule rewrite_module modules/mod_rewrite.so
+
 <VirtualHost *:80>
     # Proxy .php requests to port 9000 of the php-fpm container
     ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://php:9000/var/www/html/$1
