Add pdo, mysqli conn tests

--- a/container/php/Dockerfile
+++ b/container/php/Dockerfile
@@ -5,4 +5,4 @@ FROM php:${PHP_VERSION:+${PHP_VERSION}-}fpm-alpine
 RUN apk update; \
     apk upgrade;
 
-RUN docker-php-ext-install mysqli pdo pdo_mysql && docker-php-ext-enable pdo_mysql
+RUN docker-php-ext-install mysqli pdo_mysql
