update env and app.php for production

--- a/.env
+++ b/.env
@@ -8,3 +8,15 @@ DB_USERNAME=techlab
 DB_PASSWORD=Tech2019
 
 PROJECT_ROOT=.
+
+APP_TIMEZONE=Australia/Sydney
+
+# Local settings
+APP_ENV=local
+APP_URI=http://localhost
+APP_DEBUG=true
+
+# PROD settings
+#APP_ENV=production
+#APP_URI=https://etaki3d.techlab.works
+#APP_DEBUG=false
