switch to pgsql;add phppgadmin;get var from env

--- a/.env
+++ b/.env
@@ -1,22 +1,30 @@
 PHP_VERSION=7.3
 MYSQL_VERSION=5.7
+POSTGRES_VERSION=10.7
 APACHE_VERSION=2.4.32
 
-DB_ROOT_PASSWORD=rootpassword
+# Database
+DB_HOST=db # This is the setting in the docker config, please use it for the DB HOST name
 DB_NAME=etaki3d
 DB_USERNAME=techlab
 DB_PASSWORD=Tech2019
+DB_PORT=5432
 
+# phpPgAdmin
+PHP_PG_ADMIN_PORT=8080
+
+# Project folder
 PROJECT_ROOT=.
 
+# Timezone
 APP_TIMEZONE=Australia/Sydney
 
-# Local settings
+# Local ENV settings
 APP_ENV=local
 APP_URI=http://localhost
 APP_DEBUG=true
 
-# PROD settings
+# PROD ENV settings
 #APP_ENV=production
 #APP_URI=https://etaki3d.techlab.works
 #APP_DEBUG=false
